# genosse

./: .gitignore  README.md  finetune.py  generate.py  pyproject.toml  red_finetune.sh  run.sh
scripts/: red_finetune.sh  run.sh
